// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileInput.vue renders STD FileInput 1`] = `
<input type="file" class="std-file-input">
<div class="std-file-div std-file-div--active">
  <!--v-if-->
  <div class="std-file-input-div">No file chosen</div><i class="std-icon bi-upload std-file-input-icon"></i>
</div>
`;

exports[`FileInput.vue should renders STD FileInput with browse button 1`] = `
<input type="file" class="std-file-input">
<div class="std-file-div std-file-div--active">
  <div class="std-file-button">Browse</div>
  <div class="std-file-input-div">No file chosen</div><i class="std-icon bi-upload std-file-input-icon"></i>
</div>
`;

exports[`FileInput.vue should renders STD FileInput with custom color 1`] = `
<input type="file" class="std-file-input">
<div class="std-file-div std-file-div--active" style="background-color: aliceblue;">
  <!--v-if-->
  <div class="std-file-input-div">No file chosen</div><i class="std-icon bi-upload std-file-input-icon"></i>
</div>
`;

exports[`FileInput.vue should renders STD FileInput with error 1`] = `
<input type="file" class="std-file-input">
<div class="std-file-div std-file-div--active std-file-div--error">
  <!--v-if-->
  <div class="std-file-input-div">No file chosen</div><i class="std-icon bi-upload std-file-input-icon"></i>
</div>
`;
